# Kastro_qa_guru_Browserstack_Mobil_hw23

./: .env.config.remote  README.md  config.py  pyproject.toml  pytest.ini
browserstack_mobil/tests/: browserstack_tests.py  conftest.py
browserstack_mobil/utils/: attach.py  path.py  video.py
