[tool.poetry]
name = "browserstacks-mobil"
version = "0.1.0"
description = ""
authors = ["Silver <testingbugsrus@gmail.com>"]
readme = "README.md"
packages = [{ include = "browserstacks_mobil" }]

[tool.poetry.dependencies]
python = "3.10.5"
pytest = "7.4.0"
selene = {version = "^2.0.0-beta.17", allow-prereleases = true}
appium-python-client = "^2.8.1"
python-dotenv = "1.0.0"
pydantic = "1.10.9"
allure-pytest = ">=2.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
